hphp/hack/test/typecheck/classname/private_access.php
<?hh

class Foo {
  private static function f() {}

  public static function g(classname<Foo> $x) {
    $x::f();
  }
}
